--- a/lib/redis_em-websocket_example/player.html
+++ b/lib/redis_em-websocket_example/player.html
@@ -2,20 +2,28 @@
 
 <html>
 <head>
-<title>Websockets!</title>
-<script>
-function onMessage(evt) {
-con = document.getElementById("console");
-con.innerHTML += evt.data;
-con.innerHTML += '<br />';
-}
-websocket = new WebSocket("ws://localhost:8081");
-websocket.onmessage = function(evt) { onMessage(evt); };
-</script>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Websockets!</title>
+  <script type="text/javascript" src="./jquery-1.8.2.min.js"></script>
+  <script type="text/javascript">
+    function onMessage(evt) {
+      console.log(typeof(evt));
+      console.log(evt);
+      console.log(evt.content);
+      // var msg = JSON.parse(evt);
+      // console.log(msg.content);
+
+      // var msg = $.parseJSON(evt);
+      // console.log(msg.content);
+      //console.log(typeof(msg));
+      //console.log(msg);
+     
+    }
+    websocket = new WebSocket("ws://localhost:8081");
+    websocket.onmessage = function(evt) { onMessage(evt); };
+  </script>
 </head>
 
 <body>
-<div id="console">
-</div>
 </body>
 </html>
