--- a/lib/redis_em-websocket_example/play.html
+++ b/lib/redis_em-websocket_example/play.html
@@ -178,10 +178,18 @@ function getParameterByName(name)
       <input type="button" id="login_button" value="Sign in" />
     </div>
     <div id="signup">
+      PLEASE PICK YOUR IN CAME NAME
+      Username:
       <input type="text" id="username" />
+      You username is also your nickname, choose it carefully(case sensitive).
+      Password:
       <input type="password" id="password" />
+      Do not use punctuation etc.
+      E-mail(OPTIONAL)
       <input type="text" id="email" />
-      <input type="button" id="signup_button" value="Create an account" />
+      Your E-mail will be used ONLY in case you lose your password.
+      <input type="button" id="signup_button" value="Done" />
+      <input type="button" value="Back" />
     </div>
     <div id="user"></div>
 
